--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Messages</title>
 </head>
 <body>
+<h1>Your Messages</h1>
+<table>
+    <tr>
+        <th>Sender</th>
+        <th>Content</th>
+    </tr>
+    <tr th:each="message : ${messages}">
+        <td th:text="${message.senderPhoneNumber}">Sender</td>
+        <td th:text="${message.content}">Content</td>
+    </tr>
+</table>
 
+<h2>Send a Message</h2>
+<form action="#" th:action="@{/send}" method="post">
+    <label for="receiverPhoneNumber">Receiver Phone Number:</label>
+    <input type="text" id="receiverPhoneNumber" name="receiverPhoneNumber" required><br><br>
+    <label for="content">Message:</label>
+    <textarea id="content" name="content" required></textarea><br><br>
+    <button type="submit">Send</button>
+</form>
+<a href="#" th:href="@{/logout}">Logout</a>
 </body>
 </html>
